--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </script>
 
   <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-  <script type="module" src="src/components/shop-app.js"></script>
+  <script type="module" src="src/app.js"></script>
 
   <script>
     if ('serviceWorker' in window.navigator) {
